--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,11 @@ dependencies {
 
     // Glide image loader
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+
+
+    // Photo view
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
